// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts: reducer fetch Oauth accounts on failure 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentAccountDetail": Object {
    "balance": "3000000000000000000000",
  },
  "error": undefined,
  "filter": "",
  "oauthAccounts": Array [],
}
`;

exports[`Accounts: reducer fetch Oauth accounts on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentAccountDetail": null,
  "error": null,
  "filter": "",
  "oauthAccounts": Array [
    Object {
      "address": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
      "block_hash": "dcvn97pwo8yoh1ep9iwdo6hdulk9uxtz1dehps53emm6tpznqz7eba3p5p7pqoqc",
      "block_number": 107,
      "block_timestamp": "2022-11-09 23:13:38 UTC",
      "certificateString": "-----BEGIN CERTIFICATE-----
ZFu7U9gH/tPDNlYKwV0JofxMwMgUuvsgHdGeSJju4d300QNAOFgUV10WeUQBgK486lwUcvk6o8nAhJWYDFGbfnWcA8midQ6iicps/m7/T7fTu7V4M0vpldEWqfxekFuG/0AUyujhoqfwSfLJPmo0iQEP8LT3ilASHwzMjOetzeujV9tOemSm/3tKZcWkmqNx8ayKhb4mDdcclQ8zOAhNIkGBVd1fybuqqJHXLQC4yzbLHkWZ/OZTN2VhthECeF5ryiUUGZdOYxN2EFYnGPIIoqlpYsl4ab0gZvXK6bBw0vR/JvtpQPhuyw25VUIpa3UVAYRcdjABrAKjRovYdpEb8T002C4BnMCQMbWs8za6mhaG15zGQw5bRngQvbzjypVP7rlgyNJaaaPW0/EISVuSb1oycITPsxSneoUAHty1NfFaqRlFiH8hWAKVQ5nCiCAbjHDK03QjAmRecA82nn0DKZXqlf67LsKZN4KNbtKVEHCsTdivymmx3AokxtbMx2Ca3EIPc3h2Eykby3f7nR857UskcmL600HYs4tPIlF=
-----END CERTIFICATE-----
",
      "chainId": "",
      "commonName": "clinicaladmin",
      "country": "USA",
      "isValid": true,
      "organization": "BlockApps",
      "organizationalUnit": "Engineering",
      "owner": "6h2vbp7a08nevelwsyz6cnpuqr77diwi3wck720q",
      "parent": "0000000000000000000000000000000000000000",
      "publicKey": "-----BEGIN PUBLIC KEY-----
VRBEESfuZn6/YKyN8YQfL6uwbLFUPZFWTwZZswyXv6KRDbpXwBcQuoNuB5AIiQ9saR4yxBJRhaHLSQEZ/JzJBABTSxEWEtibIneBx0h8eAjVA3Zrpio9RMq/==
-----END PUBLIC KEY-----
",
      "record_id": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
      "transaction_hash": "9hj1qyqu52wqn45kgk5c6doy3go7qfm3beuze4dw4rfdps8ffgperqxb08qv4y72",
      "transaction_sender": "a1n72r68azg8xgx5bnr6myz0npqs9setrw2tijoc",
      "userAddress": "bzvlsnw1xpmipq866nuxkyjxb2crh0jcw1t8olbj",
    },
    Object {
      "address": "2pija4bap2id714a805tju8kgfti0g4zz92xb2p2",
      "block_hash": "qsv3kkq2qj6te2lazhqwcmx8t3uwec92gfeujsajglc58f0b83eumifklcwbuu6y",
      "block_number": 420,
      "block_timestamp": "2022-11-08 23:13:38 UTC",
      "certificateString": "-----BEGIN CERTIFICATE-----
HNzSWfySaQ7F9nJPmN4S3O0VjImiuYUxtkoecEQbvcj9bD0RPuXVpdXyVaUsBOPCK3FF0PVgqrmRd8DavK10TAo/Y3uK7XPTfRUc4Rpp1WX3nujsyx2UhzWLOgjSqooc6ElZA6S/ZVB6s3/77Ht/N1Kr86zqD2G0F3TEQDGKSTxN84Rq4/FDMlOACtV2s3csSHFjH9WyyZWjshWVC6KVQs0imMvXZbjyuep4Q0PmhkTyeUwsItPv7ZhXhZEVE3YtgJyqFcmGiIanSRQm7GUZJMMEtfBQl7WpHGO3ueNUMM/ePMbWvXbrj4R3m8tnbSKUPnySWetxr/RZTJorRFsnoR6bHfJL9E370EZPg9gTL1wmx53PGAff1BcQhww32KtBSkAYpXtHlFpvOaYo3aFIHuuQVxviv5jft1HgDWBsqWsh2cBbw3yBjskqiCBrJvahRq6Axk109xqcj8zWJqE1KzbSUhVRI3xcbavmb0jdnilJyoGr6mvrnxnwJc5b/YNhFuy2cr8u5vrtfXHbmPquqyDeCvwUIEOuBbSIjRm=
-----END CERTIFICATE-----
",
      "chainId": "",
      "commonName": "clinicalops",
      "country": "USA",
      "isValid": true,
      "organization": "BlockApps",
      "organizationalUnit": "DevOps",
      "owner": "lcifb59wxctj6dp11c4h3gzrjhhx2tubk3o7j10h",
      "parent": "0000000000000000000000000000000000000000",
      "publicKey": "-----BEGIN PUBLIC KEY-----
LjOJsnkZ8stbjPk2LyaYZCnjdfd3ehu5y8yHPfBT2iF49Hd2D/RseopgsmKMcyF5Zf7LeNY9XqhLlbt5pFhYrJ2jXW9S0sCrpaposrhmT0EnGyeWiyFHQZA7==
-----END PUBLIC KEY-----
",
      "record_id": "2pija4bap2id714a805tju8kgfti0g4zz92xb2p2",
      "transaction_hash": "kaxjqjglb0uuue895oz8onmpzmybm7pp2k88n02kub4paoorazmn8o25egyf7mqb",
      "transaction_sender": "pa6ml06vx6pyxe16l99j6ed5s5ivoyi8k2txxpoj",
      "userAddress": "ozw2xzoyais9e1p73sqeh9vd8mcvfm2oog6wc870",
    },
  ],
}
`;

exports[`Accounts: reducer fetch account details on failure 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {
      "76a3192ce9aa0531fe7e0e3489a469018c0bff03": Object {
        "error": "ERROR",
      },
    },
  },
  "currentUserBalance": undefined,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch account details on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {
      "76a3192ce9aa0531fe7e0e3489a469018c0bff03": Object {
        "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
        "balance": "999999999999699729688",
        "code": "",
        "codeHash": "c5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "contractRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "error": null,
        "kind": "AddressStateRef",
        "latestBlockNum": 9,
        "next": "/eth/v1.2/account?address=76a3192ce9aa0531fe7e0e3489a469018c0bff03&index=7",
        "nonce": 8,
        "source": "",
      },
    },
  },
  "currentUserBalance": undefined,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch account details reset account address 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {
      "2327839d6c7fc1188085554193cf578537ee660d": Object {
        "error": null,
      },
    },
    "Admin_1085_64667": Object {
      "d2263b71c14010ff03d8f786670aba691b22b158": Object {
        "error": null,
      },
    },
    "Admin_1177_31203": Object {
      "d46ade1b4fb6360fad2d05efd5d6d9fb51849320": Object {
        "error": null,
      },
    },
    "Admin_1177_39206": Object {
      "b80c7ad40cd178479d480e7136d93f2302692e4d": Object {
        "error": null,
      },
    },
    "Admin_1177_49507": Object {
      "0bdd9ade6477ba753650cc5d9ce40a17c42246c1": Object {
        "error": null,
      },
    },
    "Admin_1301_62816": Object {
      "45b53a8b688c3a3faca30e5842800922f80fdb8d": Object {
        "error": null,
      },
      "60122a032bebcb89e228899b60c4d190b5a17aa3": Object {
        "error": null,
      },
    },
    "Admin_1301_86023": Object {
      "585b8e9f36f43f38d9118b8750a5e6cd753e382e": Object {
        "error": null,
      },
    },
    "Buyer1": Object {
      "044eda43ba9c76fc36b9183c96f7a8fad8d21fe6": Object {
        "error": null,
      },
    },
    "Buyer1177_18955": Object {
      "73ea1c503b915e28162374591670904732d0e729": Object {
        "error": null,
      },
    },
    "Buyer2": Object {
      "ae5bfd0fc750d1d99e28e733bdac933dac826a4f": Object {
        "error": null,
      },
    },
    "Supplier0_1301_46441": Object {
      "error": "error",
    },
    "Supplier1": Object {},
    "Supplier1177_62701": Object {
      "21edfc77121d05aba26955b6cd435bd8f864ad78": Object {
        "error": null,
      },
    },
    "Supplier1_1301_46441": Object {
      "0ca4a9bb1b37e6d63d142722e7c37bbf8f959547": Object {
        "error": null,
      },
    },
    "Supplier2": Object {
      "bc7199468816b3b92e54828affa08a010e9adb02": Object {
        "error": null,
      },
    },
    "Supplier2_1301_46441": Object {
      "57f2ed9058d2e868d7bbae9db03af12d27675117": Object {
        "error": null,
      },
    },
    "User_1177_14462": Object {
      "cd0046de8051af7e2781b58e892b25467133276f": Object {
        "error": null,
      },
    },
    "User_1177_26292": Object {
      "dcbdac4d738461fcf11669b73668211371839c76": Object {
        "error": null,
      },
    },
    "User_1177_37717": Object {
      "9677e59a2de0a2e2f712e1d76720857066a396b9": Object {
        "error": null,
      },
    },
    "User_1177_42489": Object {
      "a421b5e3c34118266745dd8426a80b35513b2277": Object {
        "error": null,
      },
    },
    "User_1177_52307": Object {
      "0e29350e6de10d60e58ffc2a7ad84401af5f2f29": Object {
        "error": null,
      },
    },
    "User_1177_59359": Object {
      "cf7a807b9bbb64cab5f988bddb4bedfd066a83de": Object {
        "error": null,
      },
    },
    "User_1177_59578": Object {
      "620083a3803fc8a5ad71e403c1a72a0e73ece645": Object {
        "error": null,
      },
      "dcbfca1d9a80d2d78fa6f74d62489a8ff4bd9c5f": Object {
        "error": null,
      },
    },
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {
      "33c02a81e677ea493aace735f0a6b44cfa18f44e": Object {
        "error": null,
      },
    },
  },
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch accounts on failure 1`] = `
Object {
  "accounts": Object {},
  "error": "ERROR",
  "filter": "",
}
`;

exports[`Accounts: reducer fetch accounts on request 1`] = `
Object {
  "accounts": Object {},
  "currentUserBalance": undefined,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch accounts on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch balance on failure 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentUserBalance": null,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch balance on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentUserBalance": "3000000000000000000000",
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch current account details on failure 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentAccountDetail": null,
  "error": "ERROR",
  "filter": "",
}
`;

exports[`Accounts: reducer fetch current account details on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "currentAccountDetail": Object {
    "balance": "3000000000000000000000",
  },
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch user address on failure 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {
      "error": "ERROR",
    },
  },
  "currentUserBalance": undefined,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer fetch user address on success 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {
      "45b53a8b688c3a3faca30e5842800922f80fdb8d": Object {
        "error": null,
      },
      "60122a032bebcb89e228899b60c4d190b5a17aa3": Object {
        "error": null,
      },
    },
  },
  "currentUserBalance": undefined,
  "error": null,
  "filter": "",
}
`;

exports[`Accounts: reducer set initial state 1`] = `
Object {
  "accounts": Object {},
  "currentAccountDetail": null,
  "error": null,
  "filter": "",
  "oauthAccounts": Array [],
}
`;

exports[`Accounts: reducer update accounts filter 1`] = `
Object {
  "accounts": Object {
    "123456789012345678901234567890123": Object {},
    "Admin_1085_64667": Object {},
    "Admin_1177_31203": Object {},
    "Admin_1177_39206": Object {},
    "Admin_1177_49507": Object {},
    "Admin_1301_62816": Object {},
    "Admin_1301_86023": Object {},
    "Buyer1": Object {},
    "Buyer1177_18955": Object {},
    "Buyer2": Object {},
    "Supplier0_1301_46441": Object {},
    "Supplier1": Object {},
    "Supplier1177_62701": Object {},
    "Supplier1_1301_46441": Object {},
    "Supplier2": Object {},
    "Supplier2_1301_46441": Object {},
    "User_1177_14462": Object {},
    "User_1177_26292": Object {},
    "User_1177_37717": Object {},
    "User_1177_42489": Object {},
    "User_1177_52307": Object {},
    "User_1177_59359": Object {},
    "User_1177_59578": Object {},
    "User_1177_69645 ?#%!@*": Object {},
    "User_1177_79118": Object {},
    "tanuj": Object {},
  },
  "error": null,
  "filter": "Search accounts",
}
`;
